# exchange-data-collector

./: .development.env  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  test.json
.github/workflows/: gcp-k8s-deploy-ase1.yml  gcp-k8s-deploy-usc1.yml  gcp-k8s-deploy.yml  google-cloudrun-docker.yml  pull-request.yml
.k8s/: alembic-job.template.yml  config-map.template.yml  deployment.template.yml
.k8s/templates/: alembic-job.template.yml  config-map.template.yml  deployment.template.yml
alembic/: env.py
alembic/versions/: 09f683de22c4_.py  11075bc00836_.py  22bab56f31a3_.py  47392ff809ad_.py  4bd4ff963a6c_.py  689363f6cbdd_.py  6957c060dbc1_.py  72cc7bf2aee8_.py  7461faa17afe_.py  74cadc69a285_.py  9e19ffca1071_.py  a948506bbcbf_.py  ab0377b29e73_.py  ed028356120a_.py  f046597a56d5_.py  f046597a56d5_init.py  f066b6042bec_.py  ffa07a24d006_init.py
app/: config.py  main.py
app/application/collectors/: binance_collector.py  coinbase_collector.py  kraken_collector.py
app/application/common/: collector.py  maestro.py  processor.py
app/application/messengers/: apy_messenger.py  common.py  order_book_messenger.py  orders_anomalies_summary_messenger.py  volume_messenger.py
app/application/workers/: common.py  db_worker.py  orders_anomalies_summary_worker.py  orders_worker.py  volume_worker.py
app/common/: config.py  database.py  maestro.py  processor.py  worker.py
app/db/: common.py  database.py
app/db/models/: binance_order.py  compressed_order_book.py  exchange.py  liquidity.py  maestro.py  order_book.py  order_book_anomaly.py  orders_anomalies_summary.py  pair.py  volume.py
app/db/repositories/: binance_order_repository.py  compressed_order_book_repository.py  exchange_repository.py  liquidity_repository.py  maestro_repository.py  order_book_anomaly_repository.py  order_book_repository.py  orders_anomalies_summary_repository.py  pair_repository.py  volume_repository.py
app/exchange_services/: binance_service.py  exchange_service.py
app/infrastructure/clients/: binance_http_client.py  binance_websocket_client.py  coinbase_websocket_client.py  common.py  kraken_websocket_client.py
app/infrastructure/db/: database.py
app/infrastructure/messengers/: common.py  discord_messenger.py  telegram_messenger.py
app/models/: binance_response.py
app/services/collectors/: common.py  (+4 more)
app/utilities/: event_utils.py  logging_utils.py  math_utils.py  scheduling_utils.py  string_utils.py
app/utils/: event_utils.py  math_utils.py  scheduling_utils.py  string_utils.py  time_utils.py
app/workers/: order_book_worker.py
crons/: 1_order_book_delete.sql
migrations/: index_for_launch_id.py  init_binance_orderbook.py
stub/discord_webhook/: async_webhook.pyi  webhook.pyi  webhook_exceptions.pyi
stubs/discord_webhook/: __init__.pyi  webhook.pyi  webhook_exceptions.pyi
tests/common/: test_maestro.py  test_processor.py
tests/utils/: test_math_utils.py  test_scheduling_utils.py  test_string_utils.py  test_time_utils.py
(+81 files in other folders)
